# rust-async-bench

./: Cargo.toml  README.md  compare.py
benches/: run.rs
src/: executor.rs  fakeio.rs  future.rs  lib.rs  main.rs  run.rs  waker.rs
