[package]
name = "rust-async-bench"
version = "0.1.0"
authors = ["Justin Karneges <justin@karneges.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
slab = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "run"
harness = false
